--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             ><img
               class="icon"
               aria-hidden="true"
-              src="images/icons/generic-website.svg"
+              src="/images/icons/generic-website.svg"
               alt="Website Icon"
             />Website</a
           >
@@ -91,7 +91,7 @@
             ><img
               class="icon"
               aria-hidden="true"
-              src="images/icons/clutch.svg"
+              src="/images/icons/clutch.svg"
               alt="Clutch Logo"
             />Clutch</a
           >
@@ -106,7 +106,7 @@
             ><img
               class="icon"
               aria-hidden="true"
-              src="images/icons/linkedin.svg"
+              src="/images/icons/linkedin.svg"
               alt="LinkedIn Logo"
             />LinkedIn</a
           >
@@ -121,7 +121,7 @@
             ><img
               class="icon"
               aria-hidden="true"
-              src="images/icons/behance.svg"
+              src="/images/icons/behance.svg"
               alt="Behance Logo"
             />Behance</a
           > -->
@@ -136,7 +136,7 @@
             ><img
               class="icon"
               aria-hidden="true"
-              src="images/icons/github.svg"
+              src="/images/icons/github.svg"
               alt="GitHub Logo"
             />GitHub</a
           > -->
@@ -151,7 +151,7 @@
             ><img
               class="icon"
               aria-hidden="true"
-              src="images/icons/instagram.svg"
+              src="/images/icons/instagram.svg"
               alt="Instagram Logo"
             />Instagram</a
           >
@@ -166,7 +166,7 @@
             ><img
               class="icon"
               aria-hidden="true"
-              src="images/icons/spotify.svg"
+              src="/images/icons/spotify.svg"
               alt="Spotify Logo"
             />Spotify (just in case)</a
           >
@@ -181,7 +181,7 @@
             ><img
               class="icon"
               aria-hidden="true"
-              src="images/icons/generic-calendar.svg"
+              src="/images/icons/generic-calendar.svg"
               alt="Calendar Icon"
             />Schedule meet with CTO</a
           >
@@ -196,7 +196,7 @@
             ><img
               class="icon"
               aria-hidden="true"
-              src="images/icons/generic-calendar.svg"
+              src="/images/icons/generic-calendar.svg"
               alt="Calendar Icon"
             />Schedule meet with CBDO</a
           >
@@ -211,7 +211,7 @@
             ><img
               class="icon"
               aria-hidden="true"
-              src="images/icons/generic-email.svg"
+              src="/images/icons/generic-email.svg"
               alt="Email Icon"
             />Contact us by email</a
           >
@@ -226,7 +226,7 @@
             ><img
               class="icon"
               aria-hidden="true"
-              src="images/icons/generic-phone.svg"
+              src="/images/icons/generic-phone.svg"
               alt="Phone Icon"
             />or by phone</a
           >
