--- a/index.html
+++ b/index.html
@@ -23,6 +23,34 @@
     <title>Zapal Links | Unlock Your Tech Future</title>
     <link rel="icon" type="image/x-icon" href="/images/logo.svg" />
     <link rel="manifest" href="/site.webmanifest" />
+    <link
+      rel="preload"
+      href="/fonts/Ronald/Ronald-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="/fonts/Ronald/Ronald-Medium.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <!-- <link
+      rel="preload"
+      href="/fonts/Ronald/Ronald-SemiBold.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="/fonts/Ronald/Ronald-ExtraBold.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    /> -->
 
     <meta
       name="description"
