feat: preload font

--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 
 <html class="theme-dark" lang="en">
   <head>
+    <link
+      rel="preload"
+      href="/fonts/Ronald/Ronald-Regular.woff2"
+      as="font"
+      type="font/woff2"
+    />
+    <link
+      rel="preload"
+      href="/fonts/Ronald/Ronald-Medium.woff2"
+      as="font"
+      type="font/woff2"
+    />
     <!-- Google tag (gtag.js) -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-W6JC905LMC"
     ></script>
-    <script type="module">
+    <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
@@ -23,20 +35,6 @@
     <title>Zapal Links | Unlock Your Tech Future</title>
     <link rel="icon" type="image/x-icon" href="/images/logo.svg" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link
-      rel="preload"
-      href="/fonts/Ronald/Ronald-Regular.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      href="/fonts/Ronald/Ronald-Medium.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
     <!-- <link
       rel="preload"
       href="/fonts/Ronald/Ronald-SemiBold.woff2"
