feat: update manifest

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               aria-hidden="true"
               src="/images/icons/generic-calendar.svg"
               alt="Calendar Icon"
-            />Schedule meet with CTO</a
+            />Book a call with CTO</a
           >
 
           <!-- Meet with CBDO -->
@@ -224,7 +224,7 @@
               aria-hidden="true"
               src="/images/icons/generic-calendar.svg"
               alt="Calendar Icon"
-            />Schedule meet with CBDO</a
+            />Book a call with CBDO</a
           >
 
           <!-- Generic Email Alt -->
