fix: website link

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <!-- Generic Website -->
           <a
             class="button"
-            href="https://zapal.tech"
+            href="https://www.zapal.tech"
             target="_blank"
             rel="noopener"
             role="button"
