feat: base kris from hovanka links setup

--- a/index.html
+++ b/index.html
@@ -2,65 +2,30 @@
 
 <html class="theme-dark" lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="preload"
-      href="/fonts/Ronald/Ronald-Regular.woff2"
-      as="font"
-      type="font/woff2"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap"
+      rel="stylesheet"
     />
-    <link
-      rel="preload"
-      href="/fonts/Ronald/Ronald-Medium.woff2"
-      as="font"
-      type="font/woff2"
-    />
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-W6JC905LMC"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-W6JC905LMC");
-    </script>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Zapal Links | Unlock Your Tech Future</title>
-    <link rel="icon" type="image/x-icon" href="/images/logo.svg" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <!-- <link
-      rel="preload"
-      href="/fonts/Ronald/Ronald-SemiBold.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="preload"
-      href="/fonts/Ronald/Ronald-ExtraBold.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    /> -->
+    <title>Kristina Nadiryan from Hovanka</title>
+    <!-- <link rel="icon" type="image/x-icon" href="/images/logo.svg" /> -->
 
     <meta
       name="description"
-      content="Zapal is a Ukrainian stellar IT services, and web development company."
+      content="Kristina Nadiryan is a CEO of a Ukrainian mental health startup Hovanka that builds a platform to help people to build self-care routine and improve their mental health."
     />
 
     <meta
       name="keywords"
-      content="zapal, tech, ukraine, it, development, web, links, company"
+      content="kris, kristina, nadiryan, hovanka, zapal, ukraine, it, development, web, links, company, startup, mental health, healthcare"
     />
 
-    <meta rel="canonical" href="https://links.zapal.tech" />
+    <meta rel="canonical" href="https://kris.hovanka.app" />
 
     <meta name="author" content="Zapal" />
 
@@ -72,60 +37,26 @@
     <div class="container">
       <div class="column">
         <!-- Lines -->
-        <i></i>
-        <i></i>
+        <!-- <i></i> -->
+        <!-- <i></i> -->
 
-        <img
-          class="avatar"
-          src="/images/zapal-logo-with-text-white.svg"
-          alt="Zapal"
-        />
+        <img class="avatar" src="/images/hovanka-logo.svg" alt="Hovanka" />
 
-        <h1 tabindex="-1" class="sr-only">zapal</h1>
+        <h1 tabindex="-1" class="sr-only">Hovanka</h1>
 
         <!-- Short description about our brand -->
-        <p tabindex="-1">Unlock Your Tech Future</p>
+        <p tabindex="-1">Hi there! I'm Kris from Hovanka</p>
 
         <!-- All your buttons go here -->
         <div class="button-stack" role="navigation">
           <!-- Lines -->
-          <i></i>
-          <i></i>
+          <!-- <i></i> -->
+          <!-- <i></i> -->
 
-          <!-- Generic Website -->
+          <!-- Personal LinkedIn -->
           <a
             class="button"
-            href="https://www.zapal.tech"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              aria-hidden="true"
-              src="/images/icons/generic-website.svg"
-              alt="Website Icon"
-            />Website</a
-          >
-
-          <!-- Clutch -->
-          <a
-            class="button"
-            href="https://go.zapal.tech/clutch"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              aria-hidden="true"
-              src="/images/icons/clutch.svg"
-              alt="Clutch Logo"
-            />Clutch</a
-          >
-
-          <!-- LinkedIn -->
-          <a
-            class="button"
-            href="https://go.zapal.tech/linkedin"
+            href="https://www.linkedin.com/in/kristina-nadiryan-/"
             target="_blank"
             rel="noopener"
             role="button"
@@ -134,43 +65,28 @@
               aria-hidden="true"
               src="/images/icons/linkedin.svg"
               alt="LinkedIn Logo"
-            />LinkedIn</a
+            />My LinkedIn</a
           >
 
-          <!-- Behance -->
-          <!-- <a
-            class="button"
-            href="https://go.zapal.tech/behance"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              aria-hidden="true"
-              src="/images/icons/behance.svg"
-              alt="Behance Logo"
-            />Behance</a
-          > -->
-
-          <!-- GitHub -->
-          <!-- <a
-            class="button"
-            href="https://go.zapal.tech/github"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              aria-hidden="true"
-              src="/images/icons/github.svg"
-              alt="GitHub Logo"
-            />GitHub</a
-          > -->
-
-          <!-- Instagram -->
+          <!-- Startup Website -->
           <a
             class="button"
-            href="https://go.zapal.tech/instagram"
+            href="https://www.hovanka.app"
+            target="_blank"
+            rel="noopener"
+            role="button"
+            ><img
+              class="icon"
+              aria-hidden="true"
+              src="/images/icons/generic-website.svg"
+              alt="Website Icon"
+            />Hovanka website</a
+          >
+
+          <!-- Startup Instagram -->
+          <a
+            class="button"
+            href="https://www.instagram.com/hovanka.app/"
             target="_blank"
             rel="noopener"
             role="button"
@@ -179,87 +95,40 @@
               aria-hidden="true"
               src="/images/icons/instagram.svg"
               alt="Instagram Logo"
-            />Instagram</a
+            />Hovanka Instagram</a
           >
 
-          <!-- Spotify -->
+          <!-- Personal Instagram -->
           <a
             class="button"
-            href="https://go.zapal.tech/spotify"
+            href="https://www.instagram.com/kris.nadiryan/"
             target="_blank"
             rel="noopener"
             role="button"
             ><img
               class="icon"
               aria-hidden="true"
-              src="/images/icons/spotify.svg"
-              alt="Spotify Logo"
-            />Spotify (just in case)</a
+              src="/images/icons/instagram.svg"
+              alt="Instagram Logo"
+            />My Instagram</a
           >
 
-          <!-- Meet with CTO -->
+          <!-- About me -->
           <a
             class="button"
-            href="https://go.zapal.tech/with-cto"
+            href="https://www.zapal.tech/about#kristina-nadiryan"
             target="_blank"
             rel="noopener"
             role="button"
             ><img
               class="icon"
               aria-hidden="true"
-              src="/images/icons/generic-calendar.svg"
-              alt="Calendar Icon"
-            />Book a call with CTO</a
-          >
-
-          <!-- Meet with CBDO -->
-          <a
-            class="button"
-            href="https://go.zapal.tech/with-cbdo"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              aria-hidden="true"
-              src="/images/icons/generic-calendar.svg"
-              alt="Calendar Icon"
-            />Book a call with CBDO</a
-          >
-
-          <!-- Generic Email Alt -->
-          <a
-            class="button"
-            href="mailto:hello@zapal.tech"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              aria-hidden="true"
-              src="/images/icons/generic-email.svg"
-              alt="Email Icon"
-            />Contact us by email</a
-          >
-
-          <!-- Generic Phone -->
-          <a
-            class="button"
-            href="tel:+38 097 958 94 70"
-            target="_blank"
-            rel="noopener"
-            role="button"
-            ><img
-              class="icon"
-              aria-hidden="true"
-              src="/images/icons/generic-phone.svg"
-              alt="Phone Icon"
-            />or by phone</a
+              src="/images/icons/generic-website.svg"
+              alt="Website Icon"
+            />About me in Zapal</a
           >
         </div>
       </div>
     </div>
-
-    <script src="/index.js"></script>
   </body>
 </html>
