feat: kris photo

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         <!-- <i></i> -->
         <!-- <i></i> -->
 
+        <img
+          class="photo"
+          src="/images/kris-photo.webp"
+          alt="Kristina Nadiryan"
+        />
         <img class="avatar" src="/images/hovanka-logo.svg" alt="Hovanka" />
 
         <h1 tabindex="-1" class="sr-only">Hovanka</h1>
